@@ -1652,6 +1652,7 @@ You can narrow down the view by selecting a log type, the user name, or the affe
 'allpagessubmit'    => 'Go',
 'allpagesprefix'    => 'Display pages with prefix:',
 'allpagesbadtitle'  => 'The given page title was invalid or had an inter-language or inter-wiki prefix. It may contain one or more characters which cannot be used in titles.',
+'allpages-bad-ns'   => '{{SITENAME}} does not have namespace "$1".',
 
 # Special:Listusers
 'listusersfrom'      => 'Display users starting at:',
